<resources>
    <string name="app_name">Meditasi dan Retret</string>
    <string name="title_timer">Meditasi</string>
    <string name="title_Article">Artikel</string>
    <string name="title_Community">Komunitas</string>
    <string name="title_Course">Pelatihan</string>
    <string name="title_Chart">Rekap</string>
    <!--<string name="title_About">Tentang</string>-->
    <string name="title_activity_blank_fragment">BlankFragment</string>
    <string name="action_settings">Settings</string>

    <string-array name="warmup_value">
        <item>0s</item>
        <item>5s</item>
        <item>10s</item>
        <item>30s</item>
        <item>45s</item>
        <item>1m</item>
        <item>5m</item>
    </string-array>

    <string-array name="mood_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="checkbox_value">
        <item>DIS</item>
        <item>Standing BAB</item>
        <item>PMR</item>
        <item>PME</item>
        <item>Adjusting Posture</item>
        <item>315 and 426</item>
        <item>Sitting BAB</item>
        <item>Body Scanning</item>
        <item>Just Sitting</item>
        <item>Abdominal Breathing</item>
        <item>Experiencing The Breath</item>
        <item>Counting The Breath</item>
        <item>Following The Breath</item>
    </string-array>

    <array name="metode_mood">
        <item>Sangat Tidak Tenang</item>
        <item>Tidak Tenang</item>
        <item>Tenang</item>
        <item>Sangat Tenang</item>
    </array>

    <array name="minum_obat">
        <item>Tidak Minum Obat</item>
        <item>Kurang Dosis</item>
        <item>Minum Obat</item>
    </array>

    <array name="metode_progressChart">
        <item>Progress</item>
        <item>Catatan</item>
    </array>
</resources>
