<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_timer"
        android:icon="@drawable/icon_meditasi"
        android:title="@string/title_timer" />

    <item
        android:id="@+id/navigation_article"
        android:icon="@drawable/icon_article"
        android:title="@string/title_Article" />

    <item
        android:id="@+id/navigation_course"
        android:icon="@drawable/icon_course"
        android:title="@string/title_Course" />

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/icon_komunitas"
        android:title="@string/title_Community" />

    <item
        android:id="@+id/navigation_chart"
        android:icon="@drawable/icon_progress"
        android:title="@string/title_Chart" />

    <!--<item-->
        <!--android:id="@+id/navigation_about"-->
        <!--android:icon="@drawable/ic_dashboard_black_24dp"-->
        <!--android:title="@string/title_About" />-->

</menu>
